--- a/index.html
+++ b/index.html
@@ -49,18 +49,32 @@
             </li>
           </ul>
         </address>
+        <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg class="burger-button" width="32" height="24" fill="currentColor" viewBox="0 0 20 20">
+          <use href="./images/icon.svg#icon-charm_menu-hamburger"></use>
+          <path
+            fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
       </div>
     </header>
     <main>
       <!-- Hero section -->
-      <section class="main-title overlay">
+      <!-- <section class="main-title overlay">
         <div class="container container-main ">
           <h1 class="main-text ">Effective Solutions for Your Business</h1>
           <button  class="button pointer" type="button" data-modal-open>Order Service</button>
         </div>
-      </section>
+      </section> -->
       <!-- Section 1 -->
-      <section class="advantages-container">
+      <!-- <section class="advantages-container">
         <div class="container section1-container ">
           <h2 class="adventage-title  visually-hidden">Advantage</h2>
           <ul class="list ">
@@ -114,9 +128,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 2 -->
-      <section class="activity-container">
+      <!-- <section class="activity-container">
         <div class="container">
           <h2 class="activity-title">What are we doing</h2>
           <ul class="link list  activity-title-list">
@@ -146,9 +160,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 3 -->
-      <section class="main-team">
+      <!-- <section class="main-team">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="link list">
@@ -314,9 +328,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 4 -->
-      <section class="customers">      
+      <!-- <section class="customers">      
       <div class=" container"> 
        <h2 class="company">Customers</h2>
         <ul class="list">
@@ -365,9 +379,9 @@
                 </ul>
               </div> 
                 </section>
-    </main>
+    </main> -->
     <!-- Footer section -->
-    <footer class="main-title footer-container">
+    <!-- <footer class="main-title footer-container">
       <div class="container-footer">
         <div class="webstudio-footer">
         <a class="link logo-web logo-footer link-footer" href="./index.html"
@@ -409,9 +423,9 @@
                     </svg>
                   </a></li>
         </ul>        
-      </div>      
+      </div>       -->
       <!-- Subscribe form -->      
-      <div  class="Subscribe"> 
+      <!-- <div  class="Subscribe"> 
         <p class="subscribe-social-footer">Subscribe</p>
         <form class="modal-form" name="signup_form" autocomplete="on" novalidate>
           <label class="email-form">
@@ -423,9 +437,9 @@
           </form>
         </div> 
       </div>              
-    </footer>
+    </footer> -->
     <!-- Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
       <button  class="modal-btn-close" type="button" data-modal-close>
       <svg class="modal-icon" width="408" height="584">
@@ -460,6 +474,31 @@
     </div>
     </div>
     <script src="./js/modal.js">      
-    </script>
+    </script> -->
+  <!--  Mobile menu -->
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu">
+      <li><a href="" class="link">About</a></li>
+      <li><a href="" class="link">Products</a></li>
+      <li><a href="" class="link">Contacts</a></li>
+      <li><a href="" class="link">Career</a></li>
+    </ul>
+  </div>
   </body>
 </html>
