--- a/index.html
+++ b/index.html
@@ -478,18 +478,62 @@
   <!--  Mobile menu -->
   <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu">
-      <button  class="modal-btn-close" type="button" data-modal-close>
+      <button  class="btn-close" type="button" data-modal-close>
         <svg class="modal-icon" width="408" height="584">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
         </button>
     </button>
-    <ul class="mobile-menu">
-      <li><a href="" class="link">About</a></li>
-      <li><a href="" class="link">Products</a></li>
-      <li><a href="" class="link">Contacts</a></li>
-      <li><a href="" class="link">Career</a></li>
+    <ul class="mobile-menu list">
+      <li><a href="" class="link">Studio</a></li>
+      <li><a href="" class="link">Portfolio</a></li>
+      <li><a href="" class="link">Contacts</a></li>      
     </ul>
+    <ul class="mobile-contacts list">
+      <li><a href="tel:+">+11 (000) 111-11-11</a></li>
+      <li><a href="mailto:">info@devstudio.com</a></li>
+    </ul>
+    <ul class="mobile-socials list link">          
+      <li class="social-media-title">
+              <a class="socials-link " href="https://instagram.com" 
+              target="_blank" rel="noopener noreffer" aria-label="instagram icon" >
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+              </a></li>
+            <li class="social-media-title">
+              <a class="socials-link " href="https://twitter.com" 
+              target="_blank" rel="noopener noreffer" aria-label="twitter icon" >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a></li>
+            <li class="social-media-title">
+              <a  class="socials-link-footer " href="https://facebook.com" 
+              target="_blank" rel="noopener noreffer" aria-label="facebook icon" >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a></li>
+            <li class="social-media-title">
+              <a  class="socials-link-footer " href="https://linkedin.com" 
+              target="_blank" rel="noopener noreffer" aria-label="linkedin icon" >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a></li>
+    </ul>        
   </div>
+
+  <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
+
+
+
   </body>
 </html>
