--- a/index.html
+++ b/index.html
@@ -485,13 +485,13 @@
         </button>
     </button>
     <ul class="mobile-menu list">
-      <li><a href="" class="link">Studio</a></li>
-      <li><a href="" class="link">Portfolio</a></li>
-      <li><a href="" class="link">Contacts</a></li>      
+      <li><a href="" class="mobile-link">Studio</a></li>
+      <li><a href="" class="mobile-link">Portfolio</a></li>
+      <li><a href="" class="mobile-link">Contacts</a></li>      
     </ul>
     <ul class="mobile-contacts list">
-      <li><a href="tel:+">+11 (000) 111-11-11</a></li>
-      <li><a href="mailto:">info@devstudio.com</a></li>
+      <li><a class="mobile-tel" href="tel:+">+11 (000) 111-11-11</a></li>
+      <li><a class="mobile-email" href="mailto:">info@devstudio.com</a></li>
     </ul>
     <ul class="mobile-socials list link">          
       <li class="social-media-title">
