--- a/index.html
+++ b/index.html
@@ -477,13 +477,11 @@
     </script> -->
   <!--  Mobile menu -->
   <div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="menu-toggle js-close-menu">
-      <button  class="btn-close" type="button" data-modal-close>
-        <svg class="modal-icon" width="408" height="584">
+    <button class="menu-toggle js-close-menu" type="button">     
+        <svg class="modal-btn-close-mobile" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-        </button>
-    </button>
+        </svg>       
+      </button>
     <ul class="mobile-menu list">
       <li><a href="" class="mobile-link">Studio</a></li>
       <li><a href="" class="mobile-link">Portfolio</a></li>
