--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     </header>
     <main>
       <!-- Hero section -->
-      <!-- <section class="main-title overlay">
+      <section class="main-title overlay">
         <div class="container container-main ">
-          <h1 class="main-text ">Effective Solutions for Your Business</h1>
+          <h1 class="main-text ">Effective Solutions For Your Business</h1>
           <button  class="button pointer" type="button" data-modal-open>Order Service</button>
         </div>
-      </section> -->
+      </section>
       <!-- Section 1 -->
-      <!-- <section class="advantages-container">
-        <div class="container section1-container ">
+      <section class="container ">
+        <div class="container advantages-container">
           <h2 class="adventage-title  visually-hidden">Advantage</h2>
-          <ul class="list ">
+          <ul class="list adventages-list-container">
             <li class="advantages">
               <div class="adventeges-item"> 
                  <svg class="advantages-icon" width="64" height="64">
@@ -128,7 +128,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 2 -->
       <!-- <section class="activity-container">
         <div class="container">
@@ -476,7 +476,7 @@
     <script src="./js/modal.js">      
     </script> -->
   <!--  Mobile menu -->
-  <div class="menu-container js-menu-container" id="mobile-menu">
+  <!-- <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu" type="button">     
         <svg class="modal-btn-close-mobile" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -529,7 +529,7 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="./js/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script> -->
 
 
 
