--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h2 class="adventage-title  visually-hidden">Advantage</h2>
           <ul class="list adventages-list-container">
             <li class="advantages">
-              <div class="adventeges-item"> 
+              <div class="adventeges-item list"> 
                  <svg class="advantages-icon" width="64" height="64">
                     <use href="./images/icons.svg#antenna"></use>
                   </svg>
