--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
       <!-- Section 2 -->
-      <!-- <section class="activity-container">
+      <section class="activity-container">
         <div class="container">
           <h2 class="activity-title">What are we doing</h2>
           <ul class="link list  activity-title-list">
@@ -160,9 +160,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 3 -->
-      <!-- <section class="main-team">
+      <section class="main-team">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="link list">
@@ -328,7 +328,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 4 -->
       <!-- <section class="customers">      
       <div class=" container"> 
