--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <nav class="header-nav">
           <a class="link logo-web logo" href="./index.html"
             >WEB<span class="logo-studio ">Studio</span>
-          </a>
-          <ul class="list list-nav">
-            <li class="list ">
-              <a class="link header-link current" href="./index.html">Studio</a>
-            </li>
-            <li class="list">
-              <a class="link header-link " href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="list"><a class="link header-link " href="">Contacts</a></li>
-          </ul>
+          </a>          
         </nav>
+        <ul class="list list-nav">
+          <li class="list ">
+            <a class="link header-link current" href="./index.html">Studio</a>
+          </li>
+          <li class="list">
+            <a class="link header-link " href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="list"><a class="link header-link " href="">Contacts</a></li>
+        </ul>
         <address class="contact">
           <ul class="list list-contact">
             <li>
@@ -330,10 +330,10 @@
         </div>
       </section>
       <!-- Section 4 -->
-      <!-- <section class="customers">      
+      <section class="customers">      
       <div class=" container"> 
        <h2 class="company">Customers</h2>
-        <ul class="list">
+        <ul class="list logo-company">
            <li class="customers-item">
            <a class="customers-link link" href="" 
             target="_blank" rel="noopener noreffer" aria-label="instagram icon" >
@@ -349,7 +349,7 @@
                       </svg>
                       </a></li>
                       <li class="customers-item">
-                        <a class="customers-link link" href="" 
+                        <a class="customers-link link " href="" 
                         target="_blank" rel="noopener noreffer" aria-label="instagram icon" >
                         <svg class="customers-icons" width="104" height="56">
                           <use  href="./images/icons.svg#Logo-2"></use>
@@ -379,10 +379,10 @@
                 </ul>
               </div> 
                 </section>
-    </main> -->
+    </main> 
     <!-- Footer section -->
-    <!-- <footer class="main-title footer-container">
-      <div class="container-footer">
+    <footer class="main-title footer-container">
+      <div class="container-footer container">
         <div class="webstudio-footer">
         <a class="link logo-web logo-footer link-footer" href="./index.html"
           >WEB<span class="logo-studio-footer">Studio</span>
@@ -422,10 +422,11 @@
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a></li>
-        </ul>        
-      </div>       -->
+        </ul>
+               
+      </div>      
       <!-- Subscribe form -->      
-      <!-- <div  class="Subscribe"> 
+      <div  class="Subscribe"> 
         <p class="subscribe-social-footer">Subscribe</p>
         <form class="modal-form" name="signup_form" autocomplete="on" novalidate>
           <label class="email-form">
@@ -437,7 +438,7 @@
           </form>
         </div> 
       </div>              
-    </footer> -->
+    </footer>
     <!-- Modal window -->
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
