--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       </div>              
     </footer>
     <!-- Modal window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
       <button  class="modal-btn-close" type="button" data-modal-close>
       <svg class="modal-icon" width="408" height="584">
@@ -475,9 +475,9 @@
     </div>
     </div>
     <script src="./js/modal.js">      
-    </script> -->
+    </script>
   <!--  Mobile menu -->
-  <!-- <div class="menu-container js-menu-container" id="mobile-menu">
+  <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu" type="button">     
         <svg class="modal-btn-close-mobile" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -530,7 +530,7 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="./js/mobile-menu.js"></script> -->
+    <script defer src="./js/mobile-menu.js"></script>
 
 
 
