--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
-          <a class="link logo-web logo" href="./index.html"
+          <a class="link logo-web logo main-logo" href="./index.html"
             >WEB<span class="logo-studio ">Studio</span>
           </a>          
         
@@ -207,7 +207,7 @@
                     </svg>
                   </a></li>
               </ul>
-                        </div>
+            </div>
             </li>
             <li class="team-list-background">
               <img
@@ -479,7 +479,7 @@
     </script>
   <!--  Mobile menu -->
   <div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="menu-toggle js-close-menu" type="button">     
+    <button class="menu-toggle js-close-menu " type="button">     
         <svg class="modal-btn-close-mobile" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>       
@@ -490,7 +490,7 @@
       <li><a href="" class="mobile-link">Contacts</a></li>      
     </ul>
     <ul class="mobile-contacts list">
-      <li><a class="mobile-tel" href="tel:+">+11 (000) 111-11-11</a></li>
+      <li class="mobile-menu-tel"><a class="mobile-tel" href="tel:+">+11 (000) 111-11-11</a></li>
       <li><a class="mobile-email" href="mailto:">info@devstudio.com</a></li>
     </ul>
     <ul class="mobile-socials list link">          
