--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <!-- Section 2 -->
       <section class="activity-container">
         <div class="container">
-          <h2 class="activity-title">What are we doing</h2>
+          <h2 class="activity-title">      are we doing</h2>
           <ul class="link list  activity-title-list">
             <li class="activity-img">
               <img
