--- a/index.html
+++ b/index.html
@@ -169,10 +169,13 @@
           <ul class="link list">
             <li class="team-list-background">
               <img
-                src="./images/team/img1.jpg"
-                alt="mobile "
-                width="264"
-                height="260"
+                srcset="./images/team/imgteam_1@264.jpg 264w, 
+                        ./images/team/imgteam_1@528.jpg 528w"
+                sizes="(min-width: 1158px,728px,428px) 264px, 100vw" 
+                src="./images/team/imgteam_1.jpg"
+                alt="mobile"
+                width="528"
+                height="520"
               />
               <div class="container-name-position">
               <h3 class="team-name">Mark Guerrero</h3>
