--- a/index.html
+++ b/index.html
@@ -135,28 +135,40 @@
         <div class="container">
           <h2 class="activity-title">      are we doing</h2>
           <ul class="link list  activity-title-list">
-            <li class="activity-img">
+            <li class="activity-img">              
               <img
-                src="./images/section2/img1.jpg"
+               srcset="./images/section2/1desk@360.jpg 360w, 
+               ./images/section2/1desk@720.jpg 720w"
+                sizes="(min-width: 1158px,) 360px, 100vw" 
+                src="./images/section2/1desk@360.jpg"
                 alt="desktop"
-                width="360"
-                height="300"
+                width="720"
+                height="600"
+                loading="lazy"
               />
             </li>
             <li class="activity-img">
               <img
-                src="./images/section2/img2.jpg"
-                alt="mobile "
-                width="360"
-                height="300"
+               srcset="./images/section2/2desk@360.jpg 360w, 
+               ./images/section2/2desk@720.jpg 720w"
+                sizes="(min-width: 1158px,) 360px, 100vw" 
+                src="./images/section2/2desk@360.jpg"
+                alt="mobile"
+                width="720"
+                height="600"
+                loading="lazy"
               />
             </li>
             <li class="activity-img">
               <img
-                src="./images/section2/img3.jpg"
-                alt="mobile and desktop version"
-                width="360"
-                height="300"
+              srcset="./images/section2/93desk@360.jpg 360w, 
+              ./images/section2/3desk@720.jpg 720w"
+               sizes="(min-width: 1158px,) 360px, 100vw" 
+               src="./images/section2/3desk@360.jpg"
+               alt="mobile+desktop"
+               width="720"
+               height="600"
+               loading="lazy"
               />
             </li>
           </ul>
@@ -176,6 +188,7 @@
                 alt="mobile"
                 width="528"
                 height="520"
+                loading="lazy"
               />
               <div class="container-name-position">
               <h3 class="team-name">Mark Guerrero</h3>
@@ -214,10 +227,14 @@
             </li>
             <li class="team-list-background">
               <img
-                src="./images/team/img2.jpg"
-                alt="mobile "
-                width="264"
-                height="260"
+                srcset="./images/team/imgteam_2@264.jpg 264w, 
+                        ./images/team/imgteam_2@528.jpg 528w"
+                sizes="(min-width: 1158px,728px,428px) 264px, 100vw" 
+                src="./images/team/imgteam_2.jpg"
+                alt="mobile"
+                width="528"
+                height="520"
+                loading="lazy"
               />
               <div class="container-name-position">
               <h3 class="team-name">Tom Ford</h3>
@@ -254,10 +271,14 @@
             </li>
             <li class="team-list-background">
               <img
-                src="./images/team/img3.jpg"
-                alt="mobile "
-                width="264"
-                height="260"
+                srcset="./images/team/imgteam_3@264.jpg 264w, 
+                        ./images/team/imgteam_3@528.jpg 528w"
+                sizes="(min-width: 1158px,728px,428px) 264px, 100vw" 
+                src="./images/team/imgteam_3.jpg"
+                alt="mobile"
+                width="528"
+                height="520"
+                loading="lazy"
               /><div class="container-name-position">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-position">Marketing</p><ul class="socials list">
@@ -293,10 +314,14 @@
             </li>
             <li class="team-list-background">
               <img
-                src="./images/team/img4.jpg"
-                alt="mobile "
-                width="264"
-                height="260"
+                srcset="./images/team/imgteam_4@264.jpg 264w, 
+                        ./images/team/imgteam_4@528.jpg 528w"
+                sizes="(min-width: 1158px,728px,428px) 264px, 100vw" 
+                src="./images/team/imgteam_4.jpg"
+                alt="mobile"
+                width="528"
+                height="520"
+                loading="lazy"
               /><div class="container-name-position">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-position">UI Designer</p><ul class="socials list">
