--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <img
                 srcset="./images/team/imgteam_1@264.jpg 264w, 
                         ./images/team/imgteam_1@528.jpg 528w"
-                sizes="(min-width: 1158px,728px,428px) 264px, 100vw" 
+                sizes="(min-width: 428px) 264px, 100vw" 
                 src="./images/team/imgteam_1.jpg"
                 alt="mobile"
                 width="528"
